// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbItem rendering renders expected elements 1`] = `
<li
  className="Breadcrumb__item"
>
  Test
  <span
    aria-hidden="true"
    className="Breadcrumb__separator"
  >
    -
  </span>
</li>
`;

exports[`BreadcrumbItem rendering renders expected elements when href is set 1`] = `
<li
  className="Breadcrumb__item"
>
  <a
    href="#"
    other="foo"
  >
    Test
  </a>
  <span
    aria-hidden="true"
    className="Breadcrumb__separator"
  >
    -
  </span>
</li>
`;
